Reducing footprint for Gumstix LCD

--- a/BoneLedDisplay/BoneLedDisplay.ui
+++ b/BoneLedDisplay/BoneLedDisplay.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>340</width>
-    <height>182</height>
+    <width>215</width>
+    <height>123</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>340</width>
+     <width>215</width>
      <height>21</height>
     </rect>
    </property>
@@ -31,10 +31,12 @@
    </widget>
    <addaction name="menuActions"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
+   </property>
+   <property name="iconVisibleInMenu">
+    <bool>false</bool>
    </property>
   </action>
  </widget>
